Fixed the z-index error that stopped the navigation from working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,8 @@ nav {
     font-weight: var(--semi-bold);
     font-size: 13px;
     text-align: center;
+    position: relative;
+    z-index: 1000;
 }
 
 /* Styling the images in the nav */
